feat: concurrent version of the parster